packages/flare-core-apple-sdk/Sources/CFlareImCoreSdkFFI/include/flare_im_core_sdk_ffi.h

/**
 * 订阅句柄
 */
typedef uint64_t FlareSubscriptionHandle;
/**
 * 句柄类型
 */
typedef uint64_t FlareHandle;
/**
 * 输出字符串 (Rust 分配,调用方释放)
 */
typedef struct FlareString {
  char *ptr;
  size_t len;
} FlareString;
/**
 * 事件回调
 */
typedef void (*FlareEventCallback)(void *context, int32_t event_type, struct FlareString event_json);
/**
 * 批量事件回调
 */
typedef void (*FlareEventBatchCallback)(void *context,
                                        size_t event_count,
                                        struct FlareString events_json);
/**
 * 错误结构
 */
typedef struct FlareError {
  int32_t code;
  struct FlareString message;
  struct FlareString details_json;
} FlareError;
/**
 * 结果回调
 */
typedef void (*FlareResultCallback)(void *context,
                                    const struct FlareError *error,
                                    struct FlareString result_json);
/**
 * 输入字节视图 (调用方持有)
 */
typedef struct FlareBytesView {
  const uint8_t *ptr;
  size_t len;
} FlareBytesView;
FlareSubscriptionHandle flare_event_subscribe(FlareHandle handle,
                                              void *context,
                                              FlareEventCallback callback);
FlareSubscriptionHandle flare_event_subscribe_batch(FlareHandle handle,
                                                    void *context,
                                                    FlareEventBatchCallback callback);
void flare_event_unsubscribe(FlareSubscriptionHandle subscription);
void flare_event_unsubscribe_all(void);
/**
 * C ABI: `flare_message_dispatch_json`
 */
int32_t flare_message_dispatch_json(FlareHandle handle,
                                    const char *op,
                                    const char *params_json,
                                    void *context,
                                    FlareResultCallback callback);
/**
 * C ABI: `flare_message_build_json`
 */
int32_t flare_message_build_json(FlareHandle handle,
                                 const char *request_json,
                                 void *context,
                                 FlareResultCallback callback);
/**
 * C ABI: `flare_media_dispatch_json`
 */
int32_t flare_media_dispatch_json(FlareHandle handle,
                                  const char *op,
                                  const char *params_json,
                                  void *context,
                                  FlareResultCallback callback);
/**
 * C ABI: `flare_capability_dispatch_json`
 */
int32_t flare_capability_dispatch_json(FlareHandle handle,
                                       const char *op,
                                       const char *params_json,
                                       void *context,
                                       FlareResultCallback callback);
int32_t flare_sdk_disconnect(FlareHandle handle, void *context, FlareResultCallback callback);
int32_t flare_sdk_sync_conversation(FlareHandle handle,
                                    const char *conversation_id,
                                    void *context,
                                    FlareResultCallback callback);
int32_t flare_sdk_sync_messages(FlareHandle handle,
                                const char *conversation_id,
                                uint64_t last_seq,
                                int32_t limit,
                                void *context,
                                FlareResultCallback callback);
int32_t flare_sdk_get_user_presence(FlareHandle handle,
                                    const char *user_id,
                                    void *context,
                                    FlareResultCallback callback);
int32_t flare_sdk_batch_get_user_presence(FlareHandle handle,
                                          const char *user_ids_json,
                                          void *context,
                                          FlareResultCallback callback);
int32_t flare_sdk_subscribe_user_presence(FlareHandle handle,
                                          const char *user_ids_json,
                                          void *context,
                                          FlareResultCallback callback);
int32_t flare_message_create_text(FlareHandle handle,
                                  const char *conversation_id,
                                  const char *text,
                                  void *context,
                                  FlareResultCallback callback);
int32_t flare_message_send(FlareHandle handle,
                           const char *message_json,
                           void *context,
                           FlareResultCallback callback);
int32_t flare_message_list(FlareHandle handle,
                           const char *conversation_id,
                           uint64_t before_seq,
                           int32_t limit,
                           void *context,
                           FlareResultCallback callback);
int32_t flare_message_recall(FlareHandle handle,
                             const char *conversation_id,
                             const char *message_id,
                             void *context,
                             FlareResultCallback callback);
int32_t flare_message_delete(FlareHandle handle,
                             const char *conversation_id,
                             const char *message_id,
                             void *context,
                             FlareResultCallback callback);
int32_t flare_media_upload_file(FlareHandle handle,
                                const char *path,
                                const char *options_json,
                                void *context,
                                FlareResultCallback callback);
int32_t flare_media_upload_image(FlareHandle handle,
                                 const char *path,
                                 const char *options_json,
                                 void *context,
                                 FlareResultCallback callback);
int32_t flare_media_upload_video(FlareHandle handle,
                                 const char *path,
                                 const char *options_json,
                                 void *context,
                                 FlareResultCallback callback);
int32_t flare_media_upload_bytes(FlareHandle handle,
                                 struct FlareBytesView bytes,
                                 const char *file_name,
                                 const char *mime_type,
                                 const char *options_json,
                                 void *context,
                                 FlareResultCallback callback);
int32_t flare_media_delete_file(FlareHandle handle,
                                const char *file_id,
                                bool hard_delete,
                                void *context,
                                FlareResultCallback callback);
int32_t flare_media_cancel_user_file_download(FlareHandle handle,
                                              const char *download_key,
                                              void *context,
                                              FlareResultCallback callback);
int32_t flare_media_download_file_to_downloads(FlareHandle handle,
                                               const char *request_json,
                                               void *context,
                                               FlareResultCallback callback);
void flare_string_free(struct FlareString s);
/**
 * 释放由 `Box::into_raw` 传入 Dart 回调的 [`FlareError`]（须与 [`crate::executor`] 堆分配错误成对使用）。
 *
 * # Safety
 * `ptr` 须为 null，或由本 crate 经 `Box::into_raw` 分配且仅释放一次的合法指针。
 */
void flare_error_heap_free(struct FlareError *ptr);
int32_t flare_sdk_init(FlareHandle handle,
                       const char *config_json,
                       void *context,
                       FlareResultCallback callback);
int32_t flare_sdk_uninit(FlareHandle handle, void *context, FlareResultCallback callback);
int32_t flare_sdk_login(FlareHandle handle,
                        const char *user_id,
                        const char *token,
                        const char *store_config_json,
                        void *context,
                        FlareResultCallback callback);
/**
 * 预热登录会话：开 per-user 本地库 + 装配引擎，**不连网**。
 *
 * 与 [`flare_sdk_connect`] 配合实现「初始化前置、登录只做网络」：App 启动即可对
 * 「上次登录用户」调用本函数，把开库 / 迁移 / 建引擎移出登录关键路径。
 */
int32_t flare_sdk_prepare(FlareHandle handle,
                          const char *user_id,
                          const char *store_config_json,
                          void *context,
                          FlareResultCallback callback);
/**
 * 连接已 [`flare_sdk_prepare`] 预热好的会话并完成首次同步（登录的网络半段）。
 */
int32_t flare_sdk_connect(FlareHandle handle,
                          const char *user_id,
                          const char *token,
                          void *context,
                          FlareResultCallback callback);
int32_t flare_sdk_logout(FlareHandle handle, void *context, FlareResultCallback callback);
int32_t flare_sdk_update_access_token(FlareHandle handle,
                                      const char *access_token,
                                      const char *tenant_id,
                                      void *context,
                                      FlareResultCallback callback);
struct FlareString flare_sdk_version(void);
struct FlareString flare_sdk_ffi_contract_version(void);
int32_t flare_sdk_data_root(FlareHandle handle, void *context, FlareResultCallback callback);
int32_t flare_sdk_current_user_id(FlareHandle handle, void *context, FlareResultCallback callback);