packages/flare-core-flutter-sdk/lib/src/bridge/ffi_native_bridge.dart


  late final _AsyncStringFn sdkInit = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_sdk_init');
  late final _Async0Fn sdkUninit = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async0Fn>('flare_sdk_uninit');
  late final int Function(int, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Void>, Pointer<NativeFunction<_NativeResultCallback>>)
      sdkLogin = library.lookupFunction<
          Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>,
              Pointer<Void>, Pointer<NativeFunction<_NativeResultCallback>>),
          int Function(
              int,
              Pointer<Utf8>,
              Pointer<Utf8>,
              Pointer<Utf8>,
              Pointer<Void>,
              Pointer<
                  NativeFunction<_NativeResultCallback>>)>('flare_sdk_login');
  late final _Async2StringFn sdkPrepare = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_sdk_prepare');
  late final _Async2StringFn sdkConnect = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_sdk_connect');
  late final _Async2StringFn sdkUpdateAccessToken = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_sdk_update_access_token');
  late final _Async0Fn sdkLogout = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async0Fn>('flare_sdk_logout');
  late final _Async0Fn sdkCurrentUserId = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async0Fn>('flare_sdk_current_user_id');
  late final _Async0Fn sdkDataRoot = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async0Fn>('flare_sdk_data_root');
  late final _Async0Fn sdkDisconnect = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async0Fn>('flare_sdk_disconnect');
  late final _AsyncDispatchFn mediaDispatch = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncDispatchFn>('flare_media_dispatch_json');
  late final _Async2StringFn messageCreateText = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_message_create_text');
  late final _AsyncStringFn messageSend = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_message_send');
  late final int Function(int, Pointer<Utf8>, int, int, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>) messageList =
      library
          .lookupFunction<
                  Int32 Function(
                      Uint64,
                      Pointer<Utf8>,
                      Uint64,
                      Int32,
                      Pointer<Void>,
                      Pointer<NativeFunction<_NativeResultCallback>>),
                  int Function(int, Pointer<Utf8>, int, int, Pointer<Void>,
                      Pointer<NativeFunction<_NativeResultCallback>>)>(
              'flare_message_list');
  late final _Async2StringFn messageRecall = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_message_recall');
  late final _Async2StringFn messageDelete = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_message_delete');
  late final _AsyncStringFn messageBuild = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_message_build_json');
  late final _AsyncDispatchFn messageDispatch = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncDispatchFn>('flare_message_dispatch_json');
  late final _AsyncDispatchFn capabilityDispatch = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncDispatchFn>('flare_capability_dispatch_json');
  late final _AsyncStringFn syncConversation = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_sdk_sync_conversation');
  late final int Function(int, Pointer<Utf8>, int, int, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>) syncMessages =
      library
          .lookupFunction<
                  Int32 Function(
                      Uint64,
                      Pointer<Utf8>,
                      Uint64,
                      Int32,
                      Pointer<Void>,
                      Pointer<NativeFunction<_NativeResultCallback>>),
                  int Function(int, Pointer<Utf8>, int, int, Pointer<Void>,
                      Pointer<NativeFunction<_NativeResultCallback>>)>(
              'flare_sdk_sync_messages');
  late final _AsyncStringFn presenceGet = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_sdk_get_user_presence');
  late final _AsyncStringFn presenceBatchGet = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_sdk_batch_get_user_presence');
  late final _AsyncStringFn presenceSubscribe = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringFn>('flare_sdk_subscribe_user_presence');

  late final _Async2StringFn mediaUploadFile = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_media_upload_file');
  late final _Async2StringFn mediaUploadImage = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_media_upload_image');
  late final _Async2StringFn mediaUploadVideo = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _Async2StringFn>('flare_media_upload_video');
  late final int Function(
          int,
          NativeFlareBytesView,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>) mediaUploadBytes =
      library.lookupFunction<
              Int32 Function(
                  Uint64,
                  NativeFlareBytesView,
                  Pointer<Utf8>,
                  Pointer<Utf8>,
                  Pointer<Utf8>,
                  Pointer<Void>,
                  Pointer<NativeFunction<_NativeResultCallback>>),
              int Function(
                  int,
                  NativeFlareBytesView,
                  Pointer<Utf8>,
                  Pointer<Utf8>,
                  Pointer<Utf8>,
                  Pointer<Void>,
                  Pointer<NativeFunction<_NativeResultCallback>>)>(
          'flare_media_upload_bytes');
  late final _AsyncStringBoolFn mediaDeleteFile = library.lookupFunction<
      Int32 Function(Uint64, Pointer<Utf8>, Bool, Pointer<Void>,
          Pointer<NativeFunction<_NativeResultCallback>>),
      _AsyncStringBoolFn>('flare_media_delete_file');
  late final bool Function(int, Pointer<Utf8>) mediaCancelUserFileDownload =
      library.lookupFunction<Bool Function(Uint64, Pointer<Utf8>),
          bool Function(int, Pointer<Utf8>)>(
    'flare_media_cancel_user_file_download',
  );
  late final _AsyncStringFn mediaDownloadFileToDownloads =
      library.lookupFunction<
          Int32 Function(Uint64, Pointer<Utf8>, Pointer<Void>,
              Pointer<NativeFunction<_NativeResultCallback>>),
          _AsyncStringFn>('flare_media_download_file_to_downloads');

  late final int Function(
          int, Pointer<Void>, Pointer<NativeFunction<_NativeEventCallback>>)
      eventSubscribe = library.lookupFunction<
              Uint64 Function(Uint64, Pointer<Void>,
                  Pointer<NativeFunction<_NativeEventCallback>>),
              int Function(int, Pointer<Void>,
                  Pointer<NativeFunction<_NativeEventCallback>>)>(
          'flare_event_subscribe');
  late final int Function(int, Pointer<Void>,
          Pointer<NativeFunction<_NativeEventBatchCallback>>)
      eventSubscribeBatch = library.lookupFunction<
              Uint64 Function(Uint64, Pointer<Void>,
                  Pointer<NativeFunction<_NativeEventBatchCallback>>),
              int Function(int, Pointer<Void>,
                  Pointer<NativeFunction<_NativeEventBatchCallback>>)>(
          'flare_event_subscribe_batch');
  late final void Function(int) eventUnsubscribe =
      library.lookupFunction<Void Function(Uint64), void Function(int)>(
          'flare_event_unsubscribe');
  late final void Function() eventUnsubscribeAll =
      library.lookupFunction<Void Function(), void Function()>(
          'flare_event_unsubscribe_all');

  late final NativeFlareString Function() sdkVersion = library.lookupFunction<
      NativeFlareString Function(),
      NativeFlareString Function()>('flare_sdk_version');
  late final NativeFlareString Function() sdkFfiContractVersion =
      library.lookupFunction<NativeFlareString Function(),
          NativeFlareString Function()>('flare_sdk_ffi_contract_version');
  late final void Function(NativeFlareString) stringFree =
      library.lookupFunction<Void Function(NativeFlareString),
          void Function(NativeFlareString)>('flare_string_free');
  late final void Function(Pointer<NativeFlareError>) errorHeapFree =
      library.lookupFunction<Void Function(Pointer<NativeFlareError>),
          void Function(Pointer<NativeFlareError>)>('flare_error_heap_free');
}
